# homeworkbot-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
database/main_db/: database.py
database/queue_db/: database.py
models/main_db/: admin.py  assigned_discipline.py  banlist.py  chat.py  discipline.py  group.py  student.py  student_banlist.py  teacher.py  teacher_discipline.py  teacher_group.py
models/queue_db/: queue_in.py  queue_out.py  rejected.py
