[tool.poetry]
name = "homeworkbot-template"
version = "0.1.0"
description = ""
authors = ["Mikhail Artemov <babanlive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.3"
sqlalchemy = "1.4.46"
python-dotenv = "0.21.1"
requests = "2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
