[tool.poetry]
name = "homeworkbot-template"
version = "0.1.0"
description = ""
authors = ["Mikhail Artemov <babanlive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.3"
sqlalchemy = "1.4.46"
python-dotenv = "0.21.1"
requests = "2.28.2"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "22.2.0"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
click = "8.1.3"
colorama = "0.4.6"
et-xmlfile = "1.1.0"
frozenlist = "1.3.3"
greenlet = "2.0.1"
idna = "3.4"
multidict = "6.0.4"
openpyxl = "3.0.10"
pydantic = "1.10.4"
pytelegrambotapi = "4.9.0"
python-on-whales = "0.56.0"
tqdm = "4.64.1"
typer = "0.7.0"
typing-extensions = "4.4.0"
urllib3 = "1.26.14"
yarl = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
